# mkdocs-tech-docs-template

./: .yamllint  404.html  LICENSE  README.md  index.html  mkdocs.yml  requirements-dev.txt  requirements-doc.txt  setup.cfg
.github/workflows/: gh-deploy.yml  publish-to-pypi.yml  publish-to-test-pypi.yml
ADRs/: index.html
ADRs/0001/: index.html
ADRs/0002/: index.html
ADRs/0003/: index.html
ADRs/0004/: index.html
ADRs/0005/: index.html
ADRs/0006/: index.html
ADRs/0007/: index.html
ADRs/0008/: index.html
ADRs/0009/: index.html
ADRs/0010/: index.html
docs/: CONTRIBUTE.md  README.md  Usage.md  index.md
docs/ADRs/: 0001.md  0002.md  0003.md  0004.md  0005.md  0006.md  0007.md  0008.md  0009.md  0010.md  README.md
docs/assets/: extra.css
docs/plugins/: README.md  demo_notebook.ipynb  demo_table.md  example_table.csv  example_table.md
docs/setup/: CONTRIBUTE.md  README.md  customise.md
govuk_theme/: base.html
plugins/: index.html
search/: search_index.json
setup/: index.html
setup/CONTRIBUTE/: index.html
setup/customise/: index.html
stylesheets/: tags-color.css
tech_docs_template/: main.html  mkdocs_theme.yml
tech_docs_template/assets/stylesheets/: extra.css  tags-color.css
tech_docs_template/partials/: copyright.html  nav-item.html  tabs-item.html  toc-item.html
