[metadata]
name = mkdocs-tech-docs-template
version = attr: tech_docs_template.__version__
author = Soumaya Mauthoor
author_email = soumaya.mauthoor@justice.gov.uk
url = https://github.com/ministryofjustice/mkdocs-tech-docs-template
description = MkDocs theme that you can use to build technical documentation with a GOV.UK 
long_description = file: docs/README.md
long_description_content_type = text/markdown
keywords = mkdocs, technical, documentation
license = MIT
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
include_package_data = True
zip_safe = False
install_requires =
	mkdocs-material
	mkdocs-git-revision-date-localized-plugin

[options.entry_points]
mkdocs.themes =
	tech_docs_template = tech_docs_template

[options.extras_require]
docs =
	markdown-include
	mkdocs

[options.package_data]
tech_docs_template =
    *.html
	mkdocs_theme.yml
	assets/images/*
	assets/stylesheets/*
	favicons/*
	logos/*
