[metadata]
name = govuk-mkdocs-material
version = attr: govuk_mkdocs_material.__version__
author = Soumaya Mauthoor
author_email = soumaya.mauthoor@justice.gov.uk
url = https://github.com/ministryofjustice/govuk-mkdocs-material
description = MkDocs theme that you can use to build technical documentation with a GOV.UK 
long_description = file: docs/README.md
long_description_content_type = text/markdown
keywords = mkdocs, technical, documentation
license = MIT
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
package_dir =
    = src
include_package_data = True
zip_safe = False
install_requires =
	mkdocs-material >= 9.2.0b1

[options.packages.find]
where = src

[options.entry_points]
mkdocs.themes =
	govuk_mkdocs_material = govuk_mkdocs_material

[options.extras_require]
docs =
	markdown-include
	mkdocs

[options.package_data]
govuk_mkdocs_material =
    *.html
	mkdocs_theme.yml
	assets/images/*
	assets/stylesheets/*
	favicons/*
	logos/*
	partials/*
